# Universe

./: .gitignore  CMakeLists.txt  balon2.py  calcs.py  constants.py  deprecated.py  misc.py  points.py  timef.py
include/: config.h  object.h  ocl_compat.h  universe.h
include/modules/: modules.h
include/modules/core/: particle.h  polygon.h  surface.h
include/rules/: rubber_parts.h  rules.h
include/rules/actions/: rubber_parts.h
include/rules/checks/: rubber_parts.h
include/simulate/: cl_devices.h  cl_setup.h  simulate.h
include/utils/opencl/: print_info.h
src/rules.cpu/: rubber_parts.c
src/rules/cpu/: rubber_parts.c
src/rules/ocl/: rubber_parts.ocl
src/simulate/: cl_comand_queue.c  cl_context.c  cl_devices.c  cl_program.c  simulate.c
src/utils/opencl/: print_info.c
